ifc-macros/test/assign_high_to_untyped.rs
use ifc_macros::ifc_block;

fn main() {
    let _x: usize;
    ifc_block!{
        let y = 5;
        x = y;
    };
}